# rite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.org
.github/workflows/: cmake-single-platform.yml
examples/file-server/: CMakeLists.txt
examples/file-server/src/: main.cpp
examples/odin-example/: CMakeLists.txt
examples/odin-example/src/: main.cpp
include/: connection.hpp  controller.hpp  extension.hpp  kana.hpp  middleware.hpp  plain.hpp  protocol.hpp  runtime.hpp  server.hpp  tls.hpp
include/http/: behaviour.hpp  buffer.hpp  cookie.hpp  endpoint.hpp  header_map.hpp  method.hpp  parser.hpp  pluggable.hpp  query_parameters.hpp  request.hpp  response.hpp  serializer.hpp  status_code.hpp  version.hpp
include/protocols/: h2.hpp  http.hpp  https.hpp
include/protocols/h2/: connection.hpp  headers.hpp  hpack.hpp  huffman.hpp
modules/odin/: CMakeLists.txt
modules/odin/include/kana/extensions/: odin.hpp
modules/odin/include/kana/extensions/odin/: resources.hpp
modules/odin/include/rite/extensions/: odin.hpp
modules/odin/include/rite/extensions/odin/: resources.hpp
modules/odin/src/: odin.cpp
modules/session/: CMakeLists.txt  README.org
modules/session/include/rite/: session.hpp
modules/session/src/: session.cpp
src/: extension.cpp  https.cpp  runtime.cpp  server.cpp
src/http/: cookies.cpp  parser.cpp  serializer.cpp
src/protocols/h2/: connection.cpp  headers.cpp  hpack.cpp  huffman.cpp
src/servers/: http.cpp
test/: hpack.cpp
